--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.10"
 pre-commit = "^2.20.0"
 pytest = "^7.1.3"
 pendulum = "^2.1.2"
+pandas-datareader = "^0.10.0"
 
 
 [build-system]
