--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,15 @@ pendulum = "^2.1.2"
 pandas-datareader = "^0.10.0"
 
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+pytest-mock = "^3.10.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+pythonpath = [
+  ".", "src"
+]
